--- a/ProjectAlPhabet/View/MainWindow.xaml
+++ b/ProjectAlPhabet/View/MainWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectAlPhabet"
+        xmlns:localmvvm="clr-namespace:ProjectAlPhabet.ModelView"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        d:DataContext="{d:DesignInstance  Type=localmvvm:MainWindowModelView}"
+        Title="Project AlPhabet" Height="640" Width="480">
     <Grid>
 
     </Grid>
